--- a/app/src/main/res/layout/activity_task_input.xml
+++ b/app/src/main/res/layout/activity_task_input.xml
@@ -3,67 +3,97 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:padding="10dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:padding="10dp"
     tools:context=".TaskInput">
-    
+
     <TextView
         android:id="@+id/txvAddTask"
-        android:text="@string/add_task"
-        android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:text="@string/add_task" />
+
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/taskInputField"
-        android:layout_marginLeft="10dp"
-        android:layout_below="@id/txvAddTask"
-        android:layout_toLeftOf="@id/addTaskButton"
-        android:hint="Enter your Task"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txvAddTask"
+        android:layout_marginStart="10dp"
+        android:layout_toStartOf="@id/addTaskButton"
+        android:hint="@string/enter_your_task" />
 
     <Button
         android:id="@+id/addTaskButton"
-        android:layout_below="@id/txvAddTask"
-        android:layout_alignParentRight="true"
-        android:text="Add"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txvAddTask"
+        android:layout_alignParentEnd="true"
+        android:text="@string/add" />
 
-   <ImageButton
-       android:id="@+id/calendarButton"
-       android:layout_below="@+id/taskInputField"
-       android:src="@drawable/ic_calendar"
-       android:layout_marginLeft="10dp"
-       android:padding="5dp"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"/>
+    <ImageButton
+        android:id="@+id/calendarButton"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_below="@+id/taskInputField"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:importantForAccessibility="no"
+        android:onClick="onClick"
+        android:padding="5dp"
+        android:src="@drawable/ic_calendar" />
+
+    <TextView
+        android:id="@+id/calDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/calendarButton"
+        android:layout_toEndOf="@id/calendarButton" />
 
     <ImageButton
         android:id="@+id/reminderButton"
-        android:layout_toRightOf="@id/calendarButton"
-        android:layout_below="@id/taskInputField"
-        android:src="@drawable/ic_notification"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignBottom="@id/calDate"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="5dp"
+        android:layout_toEndOf="@id/calDate"
+        android:importantForAccessibility="no"
+        android:onClick="onClick"
         android:padding="5dp"
+        android:src="@drawable/ic_notification" />
+
+    <TextView
+        android:id="@+id/reminderDate"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/reminderButton"
+        android:layout_marginTop="15dp"
+        android:layout_toEndOf="@id/reminderButton" />
 
     <ImageButton
         android:id="@+id/repeatButton"
-        android:layout_toRightOf="@id/reminderButton"
-        android:layout_below="@id/taskInputField"
-        android:src="@drawable/ic_repeat"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignBottom="@id/reminderDate"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="5dp"
+        android:layout_toEndOf="@id/reminderDate"
+        android:importantForAccessibility="no"
+        android:onClick="onClick"
         android:padding="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:src="@drawable/ic_repeat" />
 
-    <FrameLayout
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/repeatButton"
+    <TextView
+        android:id="@+id/repeatDate"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/repeatButton"
+        android:layout_marginTop="15dp"
+        android:layout_toEndOf="@id/repeatButton" />
 
 
 </RelativeLayout>
