--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -5,9 +5,11 @@
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/mainText"
-        android:layout_width="wrap_content"
         android:gravity="center"
         android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_centerVertical="false"
         android:layout_alignParentStart="true"
         android:text="MainText" />
 
@@ -16,64 +18,71 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_below="@+id/mainText"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="5dp"
         android:src="@drawable/ic_calendar"
         android:visibility="visible" />
 
     <TextView
         android:id="@+id/dateLabel"
         android:layout_width="wrap_content"
-        android:layout_below="@id/mainText"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="5dp"
+        android:layout_alignBottom="@id/dueLabel"
         android:layout_toEndOf="@id/dueLabel"
-        android:text="20/20/2022" />
+        android:text="@string/dummyDate" />
 
     <ImageView
         android:id="@+id/notiIcon"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp"
-        android:layout_toEndOf="@id/dateLabel"
-        android:layout_below="@id/mainText"
-        android:src="@drawable/ic_notification"
         android:layout_width="20dp"
-        android:layout_height="20dp"/>
+        android:layout_height="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="5dp"
+        android:layout_alignBottom="@id/dateLabel"
+        android:layout_toEndOf="@id/dateLabel"
+        android:src="@drawable/ic_notification" />
 
     <TextView
         android:id="@+id/notiLabel"
         android:layout_width="wrap_content"
-        android:layout_below="@id/mainText"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="5dp"
+        android:layout_alignBottom="@id/notiIcon"
         android:layout_toEndOf="@id/notiIcon"
-        android:text="20/20/34343" />
+        android:text="@string/dummyDate" />
 
     <ImageView
         android:id="@+id/repeatImg"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="5dp"
-        android:layout_below="@id/mainText"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="5dp"
+        android:layout_alignBottom="@id/notiLabel"
         android:layout_toEndOf="@id/notiLabel"
         android:src="@drawable/ic_repeat"
         android:layout_width="20dp"
         android:layout_height="20dp"/>
 
-    <CheckBox
+    <TextView
+        android:id="@+id/repeatLabel"
+        android:layout_alignBottom="@id/repeatImg"
+        android:text="@string/dummyDate"
+        android:layout_toEndOf="@id/repeatImg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+    <ImageView
         android:id="@+id/chkBox"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:layout_margin="10dp"
         android:layout_alignParentEnd="true"
-        android:focusable="false"
+        android:src="@drawable/ic_button_checked"
         android:focusableInTouchMode="false" />
 
     <TextView
         android:id="@+id/listLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_below="@id/chkBox"
+        android:layout_marginEnd="10dp"
+        android:layout_alignBottom="@id/notiLabel"
         android:layout_alignParentEnd="true"
         android:text="List" />
 
