Checkpoint #1 Correcting some layout of TaskInput

--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -18,8 +18,8 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_below="@+id/mainText"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="15dp"
+        android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:src="@drawable/ic_calendar"
         android:visibility="visible" />
@@ -28,6 +28,7 @@
         android:id="@+id/dateLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:layout_alignBottom="@id/dueLabel"
         android:layout_toEndOf="@id/dueLabel"
         android:text="@string/dummyDate" />
@@ -37,6 +38,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="5dp"
         android:layout_alignBottom="@id/dateLabel"
         android:layout_toEndOf="@id/dateLabel"
@@ -45,6 +47,7 @@
     <TextView
         android:id="@+id/notiLabel"
         android:layout_width="wrap_content"
+        android:layout_marginTop="15dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/notiIcon"
         android:layout_toEndOf="@id/notiIcon"
@@ -54,6 +57,7 @@
         android:id="@+id/repeatImg"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginTop="15dp"
         android:layout_alignBottom="@id/notiLabel"
         android:layout_toEndOf="@id/notiLabel"
         android:src="@drawable/ic_repeat"
@@ -64,6 +68,7 @@
         android:id="@+id/repeatLabel"
         android:layout_alignBottom="@id/repeatImg"
         android:text="@string/dummyDate"
+        android:layout_marginTop="15dp"
         android:layout_toEndOf="@id/repeatImg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -81,6 +86,7 @@
         android:id="@+id/listLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="10dp"
         android:layout_alignBottom="@id/notiLabel"
         android:layout_alignParentEnd="true"
