--- a/app/src/main/res/layout/activity_task_input.xml
+++ b/app/src/main/res/layout/activity_task_input.xml
@@ -81,6 +81,7 @@
         android:layout_alignBottom="@id/reminderDate"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="5dp"
+        android:visibility="invisible"
         android:layout_toEndOf="@id/reminderDate"
         android:importantForAccessibility="no"
         android:onClick="onClick"
