--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -40,6 +40,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="5dp"
+        android:layout_below="@+id/mainText"
         android:layout_alignBottom="@id/dateLabel"
         android:layout_toEndOf="@id/dateLabel"
         android:src="@drawable/ic_notification" />
@@ -55,14 +56,15 @@
 
     <ImageView
         android:id="@+id/repeatImg"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="5dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="5dp"
+        android:layout_below="@+id/mainText"
         android:layout_alignBottom="@id/notiLabel"
         android:layout_toEndOf="@id/notiLabel"
-        android:src="@drawable/ic_repeat"
-        android:layout_width="20dp"
-        android:layout_height="20dp"/>
+    android:src="@drawable/ic_repeat"/>
 
     <TextView
         android:id="@+id/repeatLabel"
@@ -80,7 +82,8 @@
         android:layout_margin="10dp"
         android:layout_alignParentEnd="true"
         android:src="@drawable/ic_button_checked"
-        android:focusableInTouchMode="false" />
+        android:focusableInTouchMode="false"
+        android:importantForAccessibility="no" />
 
     <TextView
         android:id="@+id/listLabel"
